Larger lightbox on mobile - fixes #160

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -222,4 +222,12 @@
     margin-left: -.1em;
     margin-right: 0;
   }
+
+  /* Lightbox */
+  .featherlight-content {
+    box-sizing: border-box;
+    margin: 0 !important;
+    max-height: 100% !important;
+    overflow-x: hidden !important;
+  }
 }
